cluster-cd/infra/base/oauth2-proxy/calibre-web-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/tls-acme: "true"
    ingress: "externaldns"
  labels:
    app.kubernetes.io/instance: &name calibre-web-auth
    app.kubernetes.io/name: *name
  name: *name
spec:
  ingressClassName: nginx
  rules:
    - host: &host books.${SECRET_DOMAIN}
      http:
        paths:
        - backend:
            service:
              name: oauth2-proxy
              port:
                number: 80
          path: /oauth2
          pathType: ImplementationSpecific
  tls:
    - hosts:
        - *host
      secretName: calibre-web-tls
